# ladybug_processing

./: .travis.yml  CMakeLists.txt  README.md  package.xml
cmake/modules/: FindDC1394.cmake  FindLadybug.cmake
config/: default.yaml
include/ladybug_processing/: Colorizer.hpp  LadybugColorizerNode.hpp
launch/: ladybug_colorize.launch
src/: Colorizer.cpp  LadybugColorizerNode.cpp  ladybug_processing_node.cpp
test/: ColorizerTest.cpp  test_ladybug_processing.cpp
