<?xml version="1.0"?>
<package format="2">
    <name>ladybug_processing</name>
    <version>1.0.0</version>
    <description>ROS Package for processing ladybug camera tiles (e.g., colorizing).</description>
    <maintainer email="sjphilli@uwaterloo.ca">Steve Phillips</maintainer>
    <license>BSD</license>
    <url type="website"></url>
    <author email="sjphilli@uwaterloo.ca">Steve Phillips</author>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
    <depend>libpcl-all-dev</depend>
    <depend>libpcl-all</depend>
    <depend>pcl_ros</depend>
    <depend>pcl_conversions</depend>
    <depend>libraw1394-dev</depend>
    <depend>libdc1394-dev</depend>
    <depend>ladybug_msgs</depend>
    <depend>ladybug_camera_driver</depend>

</package>
